--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         <div class="banner_overbackground_color">
           <ul class="footertext1_icons">
             <li>
-              <a href="" title="Facebook"><img class="Facebook_icon" src="Images/facebook.png"></a>
+              <a href="" title="Facebook"><img class="Facebook_icon" src="images/facebook.png"></a>
             </li>
             <li>
-              <a href="" title="Instagram"><img class="Instagram_icon" src="Images/instagram.png"></a>
+              <a href="" title="Instagram"><img class="Instagram_icon" src="images/instagram.png"></a>
             </li>
             <li>
-              <a href="" title="linkedin"><img class="Linkedin_icon" src="Images/linkedin.png"></a>
+              <a href="" title="linkedin"><img class="Linkedin_icon" src="images/linkedin.png"></a>
             </li>
           </ul>
           <p class="banner_left_para">Find everything you need <br>to install a car audio system<br>with all brands</p>
@@ -157,13 +157,13 @@
           <div class="banner_overbackground_colorhide">
             <ul class="footertext1_icons">
               <li>
-                <a href="" title="Facebook"><img class="Facebook_icon" src="Images/facebook.png"></a>
+                <a href="" title="Facebook"><img class="Facebook_icon" src="images/facebook.png"></a>
               </li>
               <li>
-                <a href="" title="Instagram"><img class="Instagram_icon" src="Images/instagram.png"></a>
+                <a href="" title="Instagram"><img class="Instagram_icon" src="images/instagram.png"></a>
               </li>
               <li>
-                <a href="" title="linkedin"><img class="Linkedin_icon" src="Images/linkedin.png"></a>
+                <a href="" title="linkedin"><img class="Linkedin_icon" src="images/linkedin.png"></a>
               </li>
             </ul>
             <p class="banner_left_para">Find everything you need <br>to install a car audio system<br>with all brands</p>
@@ -253,16 +253,16 @@
           <p class="about_us_separate_para">Our experts work at the best brands in the world:</p>
         </div>
         <ul class="brands">
-          <li><a href="" title="1bbrand"><img class="brand" src="Images/1b.png"></a></li>
-          <li><a href="" title="2bbrand"><img class="brand2" src="Images/2b.png"></a></li>
-          <li><a href="" title="3bbrand"><img class="brand3" src="Images/3b.png"></a></li>
-          <li><a href="" title="4bbrand"><img class="brand" src="Images/4b.png"></a></li>
-          <li><a href="" title="5bbrand"><img class="brand5" src="Images/5b.png"></a></li>
-          <li><a href="" title="6bbrand"><img class="brand" src="Images/6b.png"></a></li>
-          <li><a href="" title="7bbrand"><img class="brand" src="Images/7b.png"></a></li>
-          <li><a href="" title="8bbrand"><img class="brand8" src="Images/8b.png"></a></li>
-          <li><a href="" title="9bbrand"><img class="brand" src="Images/9b.png"></a></li>
-          <li><a href="" title="10bbrand"><img class="brand" src="Images/10b.png"></a></li>
+          <li><a href="" title="1bbrand"><img class="brand" src="images/1b.png"></a></li>
+          <li><a href="" title="2bbrand"><img class="brand2" src="images/2b.png"></a></li>
+          <li><a href="" title="3bbrand"><img class="brand3" src="images/3b.png"></a></li>
+          <li><a href="" title="4bbrand"><img class="brand" src="images/4b.png"></a></li>
+          <li><a href="" title="5bbrand"><img class="brand5" src="images/5b.png"></a></li>
+          <li><a href="" title="6bbrand"><img class="brand" src="images/6b.png"></a></li>
+          <li><a href="" title="7bbrand"><img class="brand" src="images/7b.png"></a></li>
+          <li><a href="" title="8bbrand"><img class="brand8" src="images/8b.png"></a></li>
+          <li><a href="" title="9bbrand"><img class="brand" src="images/9b.png"></a></li>
+          <li><a href="" title="10bbrand"><img class="brand" src="images/10b.png"></a></li>
         </ul>
 
       </div>
