--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
           </ul>
           <p class="banner_left_para">Find everything you need <br>to install a car audio system<br>with all brands</p>
         </div>
-        <span class="banner_constant_text">
+        <div class="banner_constant_text">
           <h1 class="banner_constant">find the beat <br> you are looking for</h1>
-        </span>
+        </div>
       </div>
 
       <div class="col-md-8 col-sm-8 banner_right">
